# src/main/java/com/codingpals/hotel/controller/RoomController.java
@@ -6,6 +6,8 @@ import com.codingpals.hotel.model.PageFromOne;
 import com.codingpals.hotel.model.rest.CreateRoom;
 import com.codingpals.hotel.model.rest.Room;
 import com.codingpals.hotel.service.RoomService;
+
+import java.time.Instant;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -26,22 +28,25 @@ public class RoomController {
 
   @GetMapping("/rooms")
   public List<Room> getRooms(@RequestParam PageFromOne page,
-                             @RequestParam BoundedPageSize pageSize) {
-    return roomService.getAll(page, pageSize).stream().map(roomMapper::toRest).toList();
+                             @RequestParam BoundedPageSize pageSize,
+                              @RequestParam(required = false , defaultValue = "") String category ,
+                             @RequestParam Instant instant
+                              ) {
+    return roomService.getAll(page, pageSize , category).stream().map((room) -> roomMapper.toRest(room , instant)).toList();
   }
 
   @PostMapping("/rooms")
   public Room createRoom(@RequestBody CreateRoom createRoom) {
-    return roomMapper.toRest((roomService.save(roomMapper.toDomain(createRoom))));
+    return roomMapper.toRest((roomService.save(roomMapper.toDomain(createRoom))), Instant.now());
   }
 
   @GetMapping("/rooms/{id}")
-  public Room getRoomById(@PathVariable int id) {
-    return roomMapper.toRest(roomService.getById(id));
+  public Room getRoomById(@PathVariable int id , @RequestParam Instant instant) {
+    return roomMapper.toRest(roomService.getById(id) , instant);
   }
 
   @PutMapping("/rooms/{id}")
   public Room updateRoom(@PathVariable int id, @RequestBody Room room) {
-    return roomMapper.toRest(roomService.updateRoom(id, roomMapper.toDomain(room)));
+    return roomMapper.toRest(roomService.updateRoom(id, roomMapper.toDomain(room)) , Instant.now());
   }
 }
